p3/confs/changeable/npuzzle-app/ui-npuzzle.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: npuzzle
    tier: ui
  name: ui-npuzzle
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: npuzzle
      tier: ui
  template:
    metadata:
      labels:
        app: npuzzle
        tier: ui
    spec:
      containers:
      - name: ui
        image: dmarsell/web-npuzzle:kuber-1.0.0

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: npuzzle
    tier: ui
  name: ui-npuzzle
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: npuzzle
    tier: ui
